Estilização do Header e adição de fotos na seção Produtos

--- a/index.html
+++ b/index.html
@@ -12,36 +12,39 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="" alt="">
+                <img src="/assets/logo.avif" alt="">
             </div>
             <menu>
-                <a href="#">Início</a>
-                <a href="#">Prdutos</a>
-                <a href="#">Promoção</a>
-                <a href="#">Contato</a>
+                <a href="#start">Início</a>
+                <a href="#products">Produtos</a>
+                <a href="#promotion">Promoção</a>
+                <a href="#contact">Contato</a>
             </menu>
         </nav>
     </header>
     <main>
-        <section id="inicio">
+        <section id="start">
             <div class="banner">
                 <img src="" alt="">
             </div>
         </section>
-        <section id="produtos">
-            <h2>Produtos</h2>
-            <div class="produto-sweatshirt">
-                <img src="" alt="">
+        <h2>As melhores calças, camisetas e moletons!!!</h2><br>
+        <section id="products">
+
+            <div class="products-sweatshirt">
+                <img src="/assets/produts-sweatshirt.webp" alt="">
+                <p>Moletom Overcome Canguru "Logo" Preto</p>
+                <strong>R$: 249,90</strong>
             </div>
-            <div class="produto-tshirt">
-                <img src="" alt="">
+            <div class="products-tshirt">
+                <img src="/assets/produts-tshirt.webp" alt="">
             </div>
-            <div class="produto-pants">
-                <img src="" alt="">
+            <div class="products-pants">
+                <img src="/assets/produts-pants.webp" alt="">
             </div>
         </section>
         <section id="promotion">
-            <h2>Promoções</h2>
+            <h2>Produtos com até 80% off? Temos</h2>
             <div class="promotion-sweatshirt">
                 <img src="" alt="">
             </div>
@@ -52,7 +55,7 @@
                 <img src="" alt="">
             </div>
         </section>
-        <section id="contato">
+        <section id="contact">
             <div class="form-contact">
                 <form action="" method="post">
                     <label for="name">Nome</label>
