Adição do Banner de início e estilização da seção Produtos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Cabeçalho -->
     <header>
         <nav>
             <div class="logo">
@@ -22,38 +23,69 @@
             </menu>
         </nav>
     </header>
+    <!-- Final cabeçalho -->
+    <!-- Main -->
     <main>
         <section id="start">
             <div class="banner">
-                <img src="" alt="">
+                <img src="assets/banner-overcome.webp" alt="">
             </div>
         </section>
-        <h2>As melhores calças, camisetas e moletons!!!</h2><br>
-        <section id="products">
 
-            <div class="products-sweatshirt">
-                <img src="/assets/produts-sweatshirt.webp" alt="">
-                <p>Moletom Overcome Canguru "Logo" Preto</p>
-                <strong>R$: 249,90</strong>
+        <section id="products">
+            <h2>As melhores roupas e acessórios são aqui!!!</h2>
+            <div class="product">
+                <a href="sweatshirt.html">
+                    <div class="product-img">
+                        <img src="/assets/produts-sweatshirt.webp" alt="">
+                    </div>
+                    <div class="product-desc">
+                        <h3>Moletom Overcome Canguru "Logo" Preto</h3>
+                        <strong>R$ 249,99</strong>
+                        <p>*Em até 6X sem juros*</p>
+                    </div>
+                </a>
             </div>
-            <div class="products-tshirt">
-                <img src="/assets/produts-tshirt.webp" alt="">
+
+            <div class="product">
+                <a href="">
+                    <div class="product-img">
+                        <img src="assets/produts-tshirt.webp" alt="">
+                    </div>
+                    <div class="product-desc">
+                        <h3>Camiseta Overcome OC Logo Azul Marinho</h3>
+                        <strong>R$ 99,90</strong>
+                        <p>*Em até 3X sem juros*</p>
+                    </div>
+                </a>
             </div>
-            <div class="products-pants">
-                <img src="/assets/produts-pants.webp" alt="">
+            <div class="product">
+                <a href="">
+                    <div class="product-img">
+                        <img src="assets/produts-pants.webp" alt="">
+                    </div>
+                    <div class="product-desc">
+                        <h3>Overcome Calça Cargo Stroke Line Basic Preta</h3>
+                        <strong>R$ 200,00</strong>
+                        <p>*Em até 6X sem juros*</p>
+                    </div>
+                </a>
             </div>
+            <div class="product">
+                <a href="">
+                    <div class="product-img">
+                        <img src="assets/product-cap.webp" alt="">
+                    </div>
+                    <div class="product-desc">
+                        <h3>Touca Overcome Teddy Bear Bege</h3>
+                        <strong>R$ 99,90</strong>
+                        <p>*Em até 3X sem juros*</p>
+                    </div>
+            </div>
+            </a>
         </section>
-        <section id="promotion">
+        <section id="promotions">
             <h2>Produtos com até 80% off? Temos</h2>
-            <div class="promotion-sweatshirt">
-                <img src="" alt="">
-            </div>
-            <div class="promotion-tshirt">
-                <img src="" alt="">
-            </div>
-            <div class="promotion-pants">
-                <img src="" alt="">
-            </div>
         </section>
         <section id="contact">
             <div class="form-contact">
@@ -68,6 +100,11 @@
             </div>
         </section>
     </main>
+    <!-- Final Main -->
+    <!-- Footer -->
+    <footer>
+        <p>&copy;2024. By Leonardo Scotti. Projeto para find educacionais.</p>
+    </footer>
 </body>
 
 </html>
