Estilização da seção Promoções

--- a/sweatshirt.html
+++ b/sweatshirt.html
@@ -15,21 +15,22 @@
                 <img src="/assets/logo.avif" alt="">
             </div>
             <menu>
-                <a href="#start">Início</a>
-                <a href="#products">Produtos</a>
-                <a href="#promotion">Promoção</a>
-                <a href="#contact">Contato</a>
+                <a href="index.html">Início</a>
+                <a href="index.html">Produtos</a>
+                <a href="index.html">Promoção</a>
+                <a href="">Contato</a>
             </menu>
         </nav>
     </header>
     <main>
         <div class="detail-sweatshirt">
-            <div class="detail-img">
+            <div class="sweatshirt-img">
                 <img src="assets/produts-sweatshirt.webp" alt="">
             </div>
-            <div class="detail-desc">
+            <div class="sweatshirt-desc">
                 <h2>Moletom Overcome Canguru "Logo" Preto</h2>
-                <strong></strong>
+                <strong>R$ 249,99</strong>
+                <p>*Em até 6X sem juros*</p>
             </div>
 
         </div>
