--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <menu>
                 <a href="#start">Início</a>
                 <a href="#products">Produtos</a>
-                <a href="#promotion">Promoção</a>
+                <a href="#promotions">Promoção</a>
                 <a href="#contact">Contato</a>
             </menu>
         </nav>
@@ -86,6 +86,51 @@
         </section>
         <section id="promotions">
             <h2>Produtos com até 80% off? Temos</h2>
+            <div class="promotion">
+                <a href="">
+                    <div class="promotion-img">
+                        <img src="assets/promotion-cuts-wind.webp" alt="">
+                    </div>
+                    <div class="promotion-desc">
+                        <h3>Corta Vento Overcome Clean Vermelho</h3>
+                        <strong>R$ 50,00</strong> <del>R$ 249,90</del>
+                    </div>
+                </a>
+            </div>
+            <div class="promotion">
+                <a href="">
+                    <div class="promotion-img">
+                        <img src="assets/promotion-pant.webp" alt="">
+                    </div>
+                    <div class="promotion-desc">
+                        <h3>Calça Moletom Overcome OC Relevo Off White</h3>
+                        <strong>R$ 170,00</strong> <del>R$ 189,90</del>
+                        <p>*Em até 6X sem juros*</p>
+                    </div>
+                </a>
+            </div>
+            <div class="promotion">
+                <a href="">
+                    <div class="promotion-img">
+                        <img src="assets/promotion-sweatshirt.webp" alt="">
+                    </div>
+                    <div class="promotion-desc">
+                        <h3>Moletom Canguru Overcome X Boca de 09 Race Preto</h3>
+                        <strong>R$ 120,00</strong> <del>R$199,90</del>
+                        <p>*Em até 6X sem juros*</p>
+                    </div>
+                </a>
+            </div>
+            <div class="promotion">
+                <a href="">
+                    <div class="promotion-img">
+                        <img src="assets/promotion-tshirt.webp" alt="">
+                    </div>
+                    <div class="promotion-desc">
+                        <h3>Camiseta Overcome "Big Script" Preta</h3>
+                        <strong>R$ 59,90</strong> <del>R$ 99,90</del> </div>
+                </a>
+            </div>
         </section>
         <section id="contact">
             <div class="form-contact">
