Estilização da página de detalhes dos produtos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overcome Clothing</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -26,16 +27,18 @@
     <!-- Final cabeçalho -->
     <!-- Main -->
     <main>
+        <!-- Início -->
         <section id="start">
             <div class="banner">
                 <img src="assets/banner-overcome.webp" alt="">
             </div>
         </section>
-
+        <!-- Final Início -->
+        <!-- Produtos -->
         <section id="products">
             <h2>As melhores roupas e acessórios são aqui!!!</h2>
             <div class="product">
-                <a href="sweatshirt.html">
+                <a href="products-sweatshirt.html">
                     <div class="product-img">
                         <img src="/assets/produts-sweatshirt.webp" alt="">
                     </div>
@@ -46,9 +49,8 @@
                     </div>
                 </a>
             </div>
-
             <div class="product">
-                <a href="">
+                <a href="products-tshirt.html">
                     <div class="product-img">
                         <img src="assets/produts-tshirt.webp" alt="">
                     </div>
@@ -60,7 +62,7 @@
                 </a>
             </div>
             <div class="product">
-                <a href="">
+                <a href="products-pant.html">
                     <div class="product-img">
                         <img src="assets/produts-pants.webp" alt="">
                     </div>
@@ -84,6 +86,8 @@
             </div>
             </a>
         </section>
+        <!-- Final Produtos -->
+        <!-- Promoções -->
         <section id="promotions">
             <h2>Produtos com até 80% off? Temos</h2>
             <div class="promotion">
@@ -132,6 +136,8 @@
                 </a>
             </div>
         </section>
+        <!-- Final Promoções -->
+        <!-- Contato -->
         <section id="contact">
             <div class="form-contact">
                 <form action="" method="post">
@@ -144,12 +150,14 @@
                 </form>
             </div>
         </section>
+        <!-- Final Contato -->
     </main>
     <!-- Final Main -->
     <!-- Footer -->
     <footer>
         <p>&copy;2024. By Leonardo Scotti. Projeto para find educacionais.</p>
     </footer>
+    <!-- Final Footer -->
 </body>
 
 </html>
