Adição das fotos e começo de estilização da seção Contato

--- a/products-pant.html
+++ b/products-pant.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
     <main>
-        <div class="details-sweatshirt">
-            <div class="detail-foto-sweatshirt">
+        <div class="details-products">
+            <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
                         <img src="assets/produts-pants.webp" alt="" id="fotoGrande">
@@ -33,17 +33,17 @@
                 </div>
                 <div class="thumbs">
                     <div class="thumb" onclick="trocaImg('produts-pants.webp')">
-                        <img src="assets/produts-pants.webp" alt="">
+                        <img src="assets/thumb-pants.png" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('produts-pants-two.webp')">
-                        <img src="assets/produts-pants-two.webp" alt="">
+                        <img src="assets/thumb-pants-two.png" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('produts-pants-three.webp')">
-                        <img src="assets/produts-pants-three.webp" alt="">
+                        <img src="assets/thumb-pants-three.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="detail-price-sweatshirt">
+            <div class="detail-price-products">
                 <H1>Calça Overcome Cargo Stroke Line Basic Preta</H1>
                 <div class="price">
                     <strong>R$ 200,00</strong>
