--- a/products-tshirt.html
+++ b/products-tshirt.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
     <main>
-        <div class="details-sweatshirt">
-            <div class="detail-foto-sweatshirt">
+        <div class="details-products">
+            <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
                         <img src="assets/produts-tshirt.webp" alt="" id="fotoGrande">
@@ -33,18 +33,18 @@
                 </div>
                 <div class="thumbs">
                     <div class="thumb" onclick="trocaImg('produts-tshirt.webp')">
-                        <img src="assets/produts-tshirt.webp" alt="">
+                        <img src="assets/thumb-tshirt.png" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('produts-tshirt-two.webp')">
-                        <img src="assets/produts-tshirt-two.webp" alt="">
+                        <img src="assets/thumb-tshirt-two.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="detail-price-sweatshirt">
+            <div class="detail-price-products">
                 <H1>Camiseta Overcome OC Logo Azul Marinho</H1>
                 <div class="price">
                     <strong>R$ 99,90</strong>
-                    <p>*Em até 6X sem juros*</p>
+                    <p>*Em até 3X sem juros*</p>
                 </div>
                 <div class="tamanho">
                     <h2>Tamanho</h2>
