--- a/promotion-cuts-wind.html
+++ b/promotion-cuts-wind.html
@@ -28,28 +28,41 @@
             <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
-                        <img src="assets/product-cap.webp" alt="" id="fotoGrande">
+                        <img src="assets/promotion-cuts-wind.webp" alt="" id="fotoGrande">
                     </div>
                 </div>
                 <div class="thumbs">
-                    <div class="thumb" onclick="trocaImg('product-cap.webp')">
-                        <img src="assets/thumb-cap.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind.webp')">
+                        <img src="assets/thumb-cuts-wind.png" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('cap-two.webp')">
-                        <img src="assets/thumb-cap-two.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind-two.webp')">
+                        <img src="assets/thumb-cuts-wind-two.png" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind-three.webp')">
+                        <img src="assets/thumb-cuts-wind-three.png" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind-four.webp')">
+                        <img src="assets/thumb-cuts-wind-four.png" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind-five.webp')">
+                        <img src="assets/thumb-cuts-wind-five.png" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-cuts-wind-six.webp')">
+                        <img src="assets/thumb-cuts-wind-six.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="detail-price-products">
-                <H1>Touca Overcome Teddy Bear Bege</H1>
+                <H1>Corta Vento Overcome Clean Vermelho</H1>
                 <div class="price">
-                    <strong>R$ 99,90</strong>
-                    <p>*Em até 3X sem juros*</p>
+                    <strong>R$ 50,00</strong><del>R$ 249,90</del>
                 </div>
                 <div class="tamanho">
                     <h2>Tamanho</h2>
                     <div class="selector">
-                        <p>Tamanho único</p>
+                        <input type="checkbox" name="tam-p" id="tam-p" aria-valuetext="P">
+                        <input type="checkbox" name="tam-m" id="tam-m" aria-valuetext="M">
+                        <input type="checkbox" name="tam-g" id="tam-g" aria-valuetext="G">
                     </div>
                     <div class="esgotado">
                         <p>Esgotado</p>
