--- a/promotion-pant.html
+++ b/promotion-pant.html
@@ -28,28 +28,39 @@
             <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
-                        <img src="assets/product-cap.webp" alt="" id="fotoGrande">
+                        <img src="assets/promotion-pant.webp" alt="" id="fotoGrande">
                     </div>
                 </div>
                 <div class="thumbs">
-                    <div class="thumb" onclick="trocaImg('product-cap.webp')">
-                        <img src="assets/thumb-cap.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-pant.webp')">
+                        <img src="assets/thumb-ppant.webp" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('cap-two.webp')">
-                        <img src="assets/thumb-cap-two.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-pant-two.webp')">
+                        <img src="assets/thumb-ppant-two.avif" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-pant-three.webp')">
+                        <img src="assets/thumb-ppant-three.webp" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-pant-four.webp')">
+                        <img src="assets/thumb-ppant-four.webp" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-pant-five.webp')">
+                        <img src="assets/thumb-ppant-five.webp" alt="">
                     </div>
                 </div>
             </div>
             <div class="detail-price-products">
-                <H1>Touca Overcome Teddy Bear Bege</H1>
+                <H1>Calça Moletom Overcome OC Relevo Off White</H1>
                 <div class="price">
-                    <strong>R$ 99,90</strong>
-                    <p>*Em até 3X sem juros*</p>
+                    <strong>R$ 170,00</strong><del>R$ 189,90</del>
+                    <p>*Em até 6X sem juros*</p>
                 </div>
                 <div class="tamanho">
                     <h2>Tamanho</h2>
                     <div class="selector">
-                        <p>Tamanho único</p>
+                        <input type="checkbox" name="tam-p" id="tam-p" aria-valuetext="P">
+                        <input type="checkbox" name="tam-m" id="tam-m" aria-valuetext="M">
+                        <input type="checkbox" name="tam-g" id="tam-g" aria-valuetext="G">
                     </div>
                     <div class="esgotado">
                         <p>Esgotado</p>
