--- a/promotion-sweatshirt.html
+++ b/promotion-sweatshirt.html
@@ -28,34 +28,37 @@
             <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
-                        <img src="assets/produts-sweatshirt.webp" alt="" id="fotoGrande">
+                        <img src="assets/promotion-sweatshirt.webp" alt="" id="fotoGrande">
                     </div>
                 </div>
                 <div class="thumbs">
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt.webp')">
-                        <img src="assets/thumb-sweatshirt.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt.webp')">
+                        <img src="assets/thumb-psweatshirt.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshir-two.webp')">
-                        <img src="assets/thumb-sweatshirt-two.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-two.webp')">
+                        <img src="assets/thumb-psweatshirt-two.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-three.webp')">
-                        <img src="assets/thumb-sweatshirt-three.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-three.webp')">
+                        <img src="assets/thumb-psweatshirt-three.webp" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-four.webp')">
-                        <img src="assets/thumbsweatshirt-four.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-four.webp')">
+                        <img src="assets/thumb-psweatshirt-four.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-five.webp')">
-                        <img src="assets/thumb-sweatshirt-five.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-five.webp')">
+                        <img src="assets/thumb-psweatshirt-five.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-six.webp')">
-                        <img src="assets/thumb-sweatshirt-six.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-six.webp')">
+                        <img src="assets/thumb-psweatshirt-six.avif" alt="">
+                    </div>
+                    <div class="thumb" onclick="trocaImg('promotion-sweatshirt-seven.webp')">
+                        <img src="assets/thumb-psweatshirt-seven.avif" alt="">
                     </div>
                 </div>
             </div>
             <div class="detail-price-products">
-                <H1>Moletom Overcome Canguru "Logo" Preto</H1>
+                <H1>Moletom Canguru Overcome X Boca de 09 Race Preto</H1>
                 <div class="price">
-                    <strong>R$ 249,99</strong>
+                    <strong>R$ 120,00</strong><del>R$ 199,90</del>
                     <p>*Em até 6X sem juros*</p>
                 </div>
                 <div class="tamanho">
@@ -69,9 +72,6 @@
                         <p>Esgotado</p>
                     </div>
                 </div>
-                <p>O moletom canguru Overcome é perfeito para uso tanto para o seu dia a dia quanto em momentos de conforto em casa. Nosso moletom canguru é feito em excelente material, sendo composto por: 50% Poliéster/50% algodão. Compre agora seu moletom
-                    canguru na Overcome. Esse moletom possui capuz.
-                </p>
             </div>
         </div>
     </main>
