--- a/promotion-tshirt.html
+++ b/promotion-tshirt.html
@@ -28,30 +28,28 @@
             <div class="detail-foto-products">
                 <div class="large">
                     <div class="large-img">
-                        <img src="assets/produts-sweatshirt.webp" alt="" id="fotoGrande">
+                        <img src="assets/promotion-tshirt.webp" alt="" id="fotoGrande">
                     </div>
                 </div>
                 <div class="thumbs">
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt.webp')">
-                        <img src="assets/thumb-sweatshirt.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-tshirt.webp')">
+                        <img src="assets/thumb-ptshirt.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshir-two.webp')">
-                        <img src="assets/thumb-sweatshirt-two.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-tshirt-two.webp')">
+                        <img src="assets/thumb-ptshirt-two.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-three.webp')">
-                        <img src="assets/thumb-sweatshirt-three.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-tshirt-three.webp')">
+                        <img src="assets/thumb-ptshirt-three.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-four.webp')">
-                        <img src="assets/thumbsweatshirt-four.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-tshirt-four.webp')">
+                        <img src="assets/thumb-ptshirt-four.avif" alt="">
                     </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-five.webp')">
-                        <img src="assets/thumb-sweatshirt-five.png" alt="">
-                    </div>
-                    <div class="thumb" onclick="trocaImg('produts-sweatshirt-six.webp')">
-                        <img src="assets/thumb-sweatshirt-six.png" alt="">
+                    <div class="thumb" onclick="trocaImg('promotion-tshirt-five.webp')">
+                        <img src="assets/thumb-ptshirt-five.avif" alt="">
                     </div>
                 </div>
             </div>
+
             <div class="detail-price-products">
                 <H1>Moletom Overcome Canguru "Logo" Preto</H1>
                 <div class="price">
@@ -69,10 +67,10 @@
                         <p>Esgotado</p>
                     </div>
                 </div>
-                <p>O moletom canguru Overcome é perfeito para uso tanto para o seu dia a dia quanto em momentos de conforto em casa. Nosso moletom canguru é feito em excelente material, sendo composto por: 50% Poliéster/50% algodão. Compre agora seu moletom
-                    canguru na Overcome. Esse moletom possui capuz.
+                <p>Camisetas Overcome, venha conferir nossos modelos. Temos camisetas de manga curta, estampadas, lisas, 100% algodão e muito mais. Sempre um drop novo de camisetas chegando na Overcome. Compre agora a sua.
                 </p>
             </div>
+        </div>
         </div>
     </main>
     <footer>
