--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div class="product">
-                <a href="">
+                <a href="cap.html">
                     <div class="product-img">
                         <img src="assets/product-cap.webp" alt="">
                     </div>
@@ -91,7 +91,7 @@
         <section id="promotions">
             <h2>Produtos com até 80% off? Temos</h2>
             <div class="promotion">
-                <a href="">
+                <a href="promotion-cuts-wind.html">
                     <div class="promotion-img">
                         <img src="assets/promotion-cuts-wind.webp" alt="">
                     </div>
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="promotion">
-                <a href="">
+                <a href="promotion-pant.html">
                     <div class="promotion-img">
                         <img src="assets/promotion-pant.webp" alt="">
                     </div>
@@ -114,7 +114,7 @@
                 </a>
             </div>
             <div class="promotion">
-                <a href="">
+                <a href="promotion-sweatshirt.html">
                     <div class="promotion-img">
                         <img src="assets/promotion-sweatshirt.webp" alt="">
                     </div>
@@ -126,7 +126,7 @@
                 </a>
             </div>
             <div class="promotion">
-                <a href="">
+                <a href="promotion-tshirt.html">
                     <div class="promotion-img">
                         <img src="assets/promotion-tshirt.webp" alt="">
                     </div>
@@ -139,15 +139,22 @@
         <!-- Final Promoções -->
         <!-- Contato -->
         <section id="contact">
-            <div class="form-contact">
-                <form action="" method="post">
-                    <label for="name">Nome</label>
-                    <input type="text" name="nome" id="contact-name">
-                    <label for="email">E-mail</label>
-                    <input type="email" name="email" id="contact-email">
-                    <input type="text" name="message" id="contact-message">
-                    <input type="submit" value="ENVIAR">
-                </form>
+            <div class="container-contact">
+                <h2>Contato</h2>
+                <div class="form-contact">
+                    <form action="" method="post">
+                        <div class="form">
+                            <div class="name-email">
+                                <input type="text" name="nome" id="contact-name" placeholder="Nome...">
+                                <input type="email" name="email" id="contact-email" placeholder="exemplo@exemplo.com">
+                            </div>
+                            <div class="message">
+                                <input type="text" name="message" id="contact-message" placeholder="Mensagem...">
+                            </div>
+                        </div>
+                        <input type="submit" value="ENVIAR">
+                    </form>
+                </div>
             </div>
         </section>
         <!-- Final Contato -->
