Estilização de Contatos

--- a/index.html
+++ b/index.html
@@ -141,20 +141,17 @@
         <section id="contact">
             <div class="container-contact">
                 <h2>Contato</h2>
-                <div class="form-contact">
-                    <form action="" method="post">
-                        <div class="form">
-                            <div class="name-email">
-                                <input type="text" name="nome" id="contact-name" placeholder="Nome...">
-                                <input type="email" name="email" id="contact-email" placeholder="exemplo@exemplo.com">
-                            </div>
-                            <div class="message">
-                                <input type="text" name="message" id="contact-message" placeholder="Mensagem...">
-                            </div>
-                        </div>
-                        <input type="submit" value="ENVIAR">
-                    </form>
-                </div>
+                <form action="" method="post">
+                    <input type="text" name="Nome" id="Nome" placeholder="Nome">
+                    <input type="password" name="senha" id="senha" placeholder="Senha">
+                    <div class="persistente">
+                        <label for="Lembrar" class="switch">
+                            <input type="checkbox" name="Lembrar" id="Lembrar">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <input type="submit" value="Fazer login">
+                </form>
             </div>
         </section>
         <!-- Final Contato -->
@@ -162,7 +159,7 @@
     <!-- Final Main -->
     <!-- Footer -->
     <footer>
-        <p>&copy;2024. By Leonardo Scotti. Projeto para find educacionais.</p>
+        <p>&copy;2024. By Leonardo Scotti. Projeto para fins educacionais.</p>
     </footer>
     <!-- Final Footer -->
 </body>
