--- a/promotion-pant.html
+++ b/promotion-pant.html
@@ -58,9 +58,12 @@
                 <div class="tamanho">
                     <h2>Tamanho</h2>
                     <div class="selector">
-                        <input type="checkbox" name="tam-p" id="tam-p" aria-valuetext="P">
-                        <input type="checkbox" name="tam-m" id="tam-m" aria-valuetext="M">
-                        <input type="checkbox" name="tam-g" id="tam-g" aria-valuetext="G">
+                        <input type="radio" name="TAM" id="P">
+                        <label for="P">P</label>
+                        <input type="radio" name="TAM" id="M">
+                        <label for="M">M</label>
+                        <input type="radio" name="TAM" id="G">
+                        <label for="G">G</label>
                     </div>
                     <div class="esgotado">
                         <p>Esgotado</p>
