Revisão das imagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/assets/logo.avif" alt="">
+                <img src="/assets/logo.jpg" alt="">
             </div>
             <menu>
                 <a href="#start">Início</a>
