--- a/promotion-pant.html
+++ b/promotion-pant.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/assets/logo.avif" alt="">
+                <img src="/assets/logo.jpg" alt="">
             </div>
             <menu>
                 <a href="index.html">Início</a>
@@ -36,7 +36,7 @@
                         <img src="assets/thumb-ppant.webp" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-pant-two.webp')">
-                        <img src="assets/thumb-ppant-two.avif" alt="">
+                        <img src="assets/thumb-ppant-two.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-pant-three.webp')">
                         <img src="assets/thumb-ppant-three.webp" alt="">
