--- a/promotion-sweatshirt.html
+++ b/promotion-sweatshirt.html
@@ -33,25 +33,25 @@
                 </div>
                 <div class="thumbs">
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt.webp')">
-                        <img src="assets/thumb-psweatshirt.avif" alt="">
+                        <img src="assets/thumb-psweatshirt.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-two.webp')">
-                        <img src="assets/thumb-psweatshirt-two.avif" alt="">
+                        <img src="assets/thumb-psweatshirt-two.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-three.webp')">
                         <img src="assets/thumb-psweatshirt-three.webp" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-four.webp')">
-                        <img src="assets/thumb-psweatshirt-four.avif" alt="">
+                        <img src="assets/thumb-psweatshirt-four.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-five.webp')">
-                        <img src="assets/thumb-psweatshirt-five.avif" alt="">
+                        <img src="assets/thumb-psweatshirt-five.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-six.webp')">
-                        <img src="assets/thumb-psweatshirt-six.avif" alt="">
+                        <img src="assets/thumb-psweatshirt-six.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-sweatshirt-seven.webp')">
-                        <img src="assets/thumb-psweatshirt-seven.avif" alt="">
+                        <img src="assets/thumb-psweatshirt-seven.jpg" alt="">
                     </div>
                 </div>
             </div>
