--- a/promotion-tshirt.html
+++ b/promotion-tshirt.html
@@ -33,19 +33,19 @@
                 </div>
                 <div class="thumbs">
                     <div class="thumb" onclick="trocaImg('promotion-tshirt.webp')">
-                        <img src="assets/thumb-ptshirt.avif" alt="">
+                        <img src="assets/thumb-ptshirt.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-tshirt-two.webp')">
-                        <img src="assets/thumb-ptshirt-two.avif" alt="">
+                        <img src="assets/thumb-ptshirt-two.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-tshirt-three.webp')">
-                        <img src="assets/thumb-ptshirt-three.avif" alt="">
+                        <img src="assets/thumb-ptshirt-three.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-tshirt-four.webp')">
-                        <img src="assets/thumb-ptshirt-four.avif" alt="">
+                        <img src="assets/thumb-ptshirt-four.jpg" alt="">
                     </div>
                     <div class="thumb" onclick="trocaImg('promotion-tshirt-five.webp')">
-                        <img src="assets/thumb-ptshirt-five.avif" alt="">
+                        <img src="assets/thumb-ptshirt-five.jpg" alt="">
                     </div>
                 </div>
             </div>
