--- a/products-pant.html
+++ b/products-pant.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/assets/logo.avif" alt="">
+                <img src="/assets/logo.jpg" alt="">
             </div>
             <menu>
                 <a href="index.html">Início</a>
