--- a/promotion-tshirt.html
+++ b/promotion-tshirt.html
@@ -51,10 +51,9 @@
             </div>
 
             <div class="detail-price-products">
-                <H1>Moletom Overcome Canguru "Logo" Preto</H1>
+                <H1>Camiseta Overcome "Big Script" Preta</H1>
                 <div class="price">
-                    <strong>R$ 249,99</strong>
-                    <p>*Em até 6X sem juros*</p>
+                    <strong>R$ 59,90</strong><del>R$ 99,90</del>
                 </div>
                 <div class="tamanho">
                     <h2>Tamanho</h2>
